[FE] Fix main menu user info gap.

--- a/responser-frontend/src/app/logic/main-page/main-menu/MainMenu.less
+++ b/responser-frontend/src/app/logic/main-page/main-menu/MainMenu.less
@@ -49,7 +49,7 @@
 
         .user-info {
             .username {
-                margin: 0;
+                margin: 0 0 6px;
                 .fontOutfitRegular(24px);
                 color: @brown-soft;
             }
